# clipmorph

./: .dockerignore  .gitignore  CICD.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.app  Dockerfile.train  LICENSE  PIPELINE.md  README.md  app.py  climorph.ipynb  clipmorph.py  fast_style_network.ipynb  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  setup.sh  styles.txt
.github/assets/eval/vid/: ski.mov  ski_kandinsky.mov  ski_muse.mov  ski_starrynight.mov
.github/workflows/: clipmorph_tests.yml  code_style.yml  deploy.yml  pylint.yml
api/: Dockerfile  api.py  requirements.txt  styles.txt
api/static/stylesheets/: index.css
api/templates/: inde_test.html  index.html
app/: README.md  app.py
app/static/stylesheets/: index.css
app/templates/: index.html
clipmorph/: climorph.ipynb  run.py  train.py
clipmorph/data/: __init__.py  genome_loader.py
clipmorph/nn/: __init__.py  backbone.py  unet.py  unet_layers.py
clipmorph/util/: __init__.py  losses.py  math.py  video.py
templates/: index.html
tests/: test_train.py
tests/data/: test_data.py
tests/nn/: test_unet.py  test_vgg.py
tests/util/: test_losses.py  test_math.py  test_video.py
training_data/: download_genome.sh
